--- a/config/nvim/tmuxconfig/.tmux.conf
+++ b/config/nvim/tmuxconfig/.tmux.conf
@@ -1,6 +1,7 @@
 # Theivery from https://youtu.be/U-omALWIBos
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:RGB"
 
 set -g prefix C-a
 unbind C-b
