--- a/config/nvim/tmuxconfig/.tmux.conf
+++ b/config/nvim/tmuxconfig/.tmux.conf
@@ -1,7 +1,6 @@
 # Theivery from https://youtu.be/U-omALWIBos
 
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal "screen-256color"
 
 set -g prefix C-a
 unbind C-b
@@ -43,6 +42,9 @@ bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
 bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+
+bind-key -n 'C-S-Left' swap-window -t -1\; select-window -t -1
+bind-key -n 'C-S-Right' swap-window -t +1\; select-window -t +1
 
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 
