--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "config/nvim"]
 	path = config/nvim
-	url = https://github.com/mattyoung101/nvim-setup.git
+	url = git@github.com:mattyoung101/nvim-setup.git
 [submodule "config/dotfiles-artwork"]
 	path = config/dotfiles-artwork
 	url = git@github.com:mattyoung101/dotfiles-artwork.git
