Add branches to gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,11 @@
 [submodule "config/nvim"]
 	path = config/nvim
-	url = git@github.com:mattyoung101/nvim-setup.git
+    url = git@github.com:mattyoung101/nvim-setup.git
+    branch = master
 [submodule "config/dotfiles-artwork"]
 	path = config/dotfiles-artwork
-	url = git@github.com:mattyoung101/dotfiles-artwork.git
+    url = git@github.com:mattyoung101/dotfiles-artwork.git
+    branch = master
 [submodule "host-serpent"]
 	path = host-serpent
 	url = git@github.com:mattyoung101/dotfiles-hostspecific.git
