Improve mpv config and prevent system hang
For some reason the old mpv conf was causing the system to hang.
These new options are better anyways.

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -56,7 +56,14 @@ window-maximized=yes
 
 # Specify high quality video rendering preset (for --vo=gpu only)
 # Can cause performance problems with some drivers and GPUs.
-profile=gpu-hq
+
+profile=high-quality
+
+gpu-api=vulkan
+
+vo=gpu-next
+
+hwdec=auto-safe
 
 # Force video to lock on the display's refresh rate, and change video and audio
 # speed to some degree to ensure synchronous playback - can cause problems
@@ -67,7 +74,6 @@ profile=gpu-hq
 # video outputs, but should work well with default settings on most systems.
 # If performance or energy usage is an issue, forcing the vdpau or vaapi VOs
 # may or may not help.
-hwdec=auto
 
 loop-file=inf
 
